// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should render as expected with attention icon 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        heading
      </h1>
      content
    </div>
  </div>
</div>
`;

exports[`Should render as expected with success icon 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-success
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        heading
      </h1>
      content
    </div>
  </div>
</div>
`;
